--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">        
+
 </head>
 
 <body>
@@ -22,7 +23,9 @@
         <div class="row">
             <a href="practice.html" class="btn btn-outline-primary mb-2">All Video Practices</a>
             <a href="questionBank.html" class="btn btn-outline-primary mb-2">Simple Question Bank app</a>
-            <a href="calculator-task.html" class="btn btn-outline-primary">Vue Js Calculator</a>
+            <a href="calculator-task.html" class="btn btn-outline-primary mb-2">Vue Js Calculator</a>
+            <a href="sorting-in-vue-js.html" class="btn btn-outline-primary mb-2">Sorting Vue Js</a>
+            <a href="todo-app.html" class="btn btn-outline-primary mb-2">Todo App</a>
         </div>
     </div>
 </body>
