--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <a href="calculator-task.html" class="btn btn-outline-primary mb-2">Vue Js Calculator</a>
             <a href="sorting-in-vue-js.html" class="btn btn-outline-primary mb-2">Sorting Vue Js</a>
             <a href="todo-app.html" class="btn btn-outline-primary mb-2">Todo App</a>
+            <a href="component-props.html" class="btn btn-outline-primary mb-2">Component & Props Practice 1</a>
+            <a href="comment-system-with-component.html" class="btn btn-outline-primary mb-2">Component & Props Practice 2</a>
+
         </div>
     </div>
 </body>
